--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,16 +24,11 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,1.6
 
-# unscale XWayland
 xwayland {
   force_zero_scaling = true
 }
-
-# toolkit-specific scale
-env = GDK_SCALE,2
-env = XCURSOR_SIZE,32
 
 ###################
 ### MY PROGRAMS ###
@@ -44,7 +39,7 @@ env = XCURSOR_SIZE,32
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
 #################
@@ -54,11 +49,10 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
+exec-once = $terminal
 exec-once = nm-applet &
-exec-once = waybar & hyprpaper
-exec-once = wl-paste --type text --watch cliphist store 
-exec-once = wl-paste --type image --watch cliphist store
+exec-once = waybar & hyprpaper & firefox
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
 #############################
@@ -70,6 +64,13 @@ exec-once = wl-paste --type image --watch cliphist store
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# toolkit-specific scale
+env = GDK_SCALE,2
+
+# theme
+env = GTK_THEME,Adwaita:dark
+env = GTK2_RC_FILES,/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
+env = QT_STYLE_OVERRIDE,Adwaita-Dark
 
 #####################
 ### LOOK AND FEEL ###
@@ -80,7 +81,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 15
+    gaps_out = 20
 
     border_size = 2
 
@@ -222,25 +223,16 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-bind = Alt, Tab, cyclenext
-
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, F, togglefloating,
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-
-bind = $mainMod, t, togglegroup
-bind = alt, tab, changegroupactive, f
-bind = ctrl + alt, tab, changegroupactive, b
-
-bind = ctrl + alt, right, workspace, e+1
-bind = ctrl + alt, left, workspace, e-1
+bind = $mainMod, TAB, exec, rofi -show window
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -280,6 +272,15 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
+# Scroll existing workspaces 
+bind = ctrl + alt, right, workspace, e+1
+bind = ctrl + alt, left, workspace, e-1
+
+# Groups
+bind = $mainMod, t, togglegroup
+bind = alt, tab, changegroupactive, f
+bind = ctrl + alt, tab, changegroupactive, b
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
@@ -298,9 +299,9 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Screen brightness
-bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+# Keyboard backlight
+bind = , XF86KbdBrightnessUp, exec, brightnessctl -d *::kbd_backlight set +33%
+bind = , XF86KbdBrightnessDown, exec, brightnessctl -d *::kbd_backlight set 33%-
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
